@@ -17,7 +17,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
-common/living.c: don't ignore exp gained in a skill you don't know yet.
+Add Crossfire.Object.Skill property.
+ plugins/cfpython/include/cfpython_object_private.h
+ plugins/cfpython/cfpython_object.c
+ plugins/common/plugin_common.c: fix a crash when a NULL value.
+Nicolas Weeger 2007-06-04
+
+ common/living.c: don't ignore exp gained in a skill you don't know yet.
 Nicolas Weeger 2007-06-04
 
 Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
